# rust_db_lib

./: .gitignore  Cargo.toml  preprod_check.sh  上线前测试准备.txt
.continue/rules/: rustdb.md
mssql/examples/: basic_usage.rs
mssql/src/: connection.rs  error.rs  fmt.rs  lib.rs  resultset.rs  row.rs  serde.rs  sql.rs
mssql/src/pool/: mod.rs  wrap.rs
mssql/tests/: fair_bench.rs  full_api_test.rs  pool.rs  prelude.rs  raise_error.rs  serde.rs  stress_test.rs
mysql/examples/: basic_usage.rs  copy_in.rs  stress_test.rs
mysql/src/: connection.rs  error.rs  fmt.rs  lib.rs  resultset.rs  row.rs  serde.rs  sql.rs
mysql/src/pool/: mod.rs
mysql/tests/: basic.rs  basic_usage.rs  fair_bench.rs  full_api_test.rs  stress_test.rs
pgsql/examples/: basic_usage.rs  large_copy_out_persistent.rs  stress_test.rs  verify_data.rs
pgsql/src/: connection.rs  error.rs  fmt.rs  lib.rs  resultset.rs  row.rs  serde.rs  sql.rs
pgsql/src/pool/: mod.rs  wrap.rs
pgsql/tests/: copy_in.rs  copy_out.rs  copy_out_corrected_test.rs  copy_out_large_performance.rs  copy_out_performance.rs  fair_bench.rs  full_api_test.rs  pool.rs  prelude.rs  serde.rs  stress_test.rs
sqlite/: Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal
sqlite/examples/: basic_usage.rs
sqlite/src/: connection.rs  error.rs  lib.rs  resultset.rs  row.rs  sql.rs
sqlite/tests/: sql_tests.rs
src/: main.rs  reference1.rs
tests/: preflight.rs
