[workspace]
resolver = "3"
members = ["mssql", "pgsql", "mysql", "sqlite"]

[package]
name = "rustdemo"
version = "0.1.0"
edition = "2024"

[dependencies]
mssql = { path = "mssql" }
pgsql = { path = "pgsql" }
mysql = { path = "mysql" }
sqlite = { path = "sqlite" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing = "0.1"
tracing-appender = "0.2"
lazy_static = "1.4.0"
regex = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
bytes = "1"
