[package]
name = "sqlite"
version = "0.1.0"
authors = ["gaoqiangz"]
edition = "2021"
description = "SQLite Database Client"

[dependencies]
tokio-rusqlite = "0.5.1"
rusqlite = { version = "0.31", features = [
    "bundled",
    "chrono",
    "uuid",
    "serde_json",
] }
tracing = "0.1.37"
thiserror = "1.0.10"
regex = "1.3.4"
lazy_static = "1.4.0"
async-trait = "0.1.42"
futures-util = "0.3.12"
bytes = "1.0"
tokio = { version = "1.1.0", features = ["full"] }
tokio-util = { version = "0.6.2", features = ["compat"] }
futures = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = { version = "1.0.47", features = ["preserve_order"] }
rust_decimal = { version = "1.10.3" }
rust_decimal_macros = "1.10.3"
